--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>UNFINISHED</h1>
-        <p class="tagline">MAKING FILMS DIFFERENTLY.
-            <br>WITH THREE DECADES' WORTH OF COLLECTIVE
-            ARTISTIC, FILMMAKING, AND JOURNALISTIC EXPERIENCE,
-            <br>WE TURN OUR LENS ON HUMAN STORIES THAT MATTER.
+        <img src="unfinished-logo-white.png"
+    alt="unfinished logo"/>
+        <p class="tagline">We are UNFINISHED, a lens-based creative collective
+            <br>making socially embedded, critical and curious films.
         </p>
-        <p class="contact">PRODUCERS@WEAREUNFINISHED.CO.UK</p>
-        <p class="location">LONDON, UK</p>
+        <p class="contact">producers@weareunfinished.co.uk</p>
+        <p class="location">London, UK</p>
     </div>
 </body>
 </html>
