--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="unfinished-logo-white.png"
-    alt="unfinished logo"/>
+        <img src="https://raw.githubusercontent.com/unfinished-productions/Unfinishedwebsite/refs/heads/main/Unfinished-Logo-White.png"
+    alt="unfinished logo"/><br><br>
         <p class="tagline">We are UNFINISHED, a lens-based creative collective
             <br>making socially embedded, critical and curious films.
         </p>
