--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://raw.githubusercontent.com/unfinished-productions/Unfinishedwebsite/refs/heads/main/Unfinished-Logo-White.png"
+        <img src="https://raw.githubusercontent.com/unfinished-productions/Unfinishedwebsite/refs/heads/main/Unfinished-Logo-White.png" width="250" height="35"
     alt="unfinished logo"/><br><br>
         <p class="tagline">We are UNFINISHED, a lens-based creative collective
             <br>making socially embedded, critical and curious films.
