--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="https://raw.githubusercontent.com/unfinished-productions/Unfinishedwebsite/refs/heads/main/Unfinished-Logo-White.png" width="250" height="35"
     alt="unfinished logo"/><br><br>
         <p class="tagline">We are UNFINISHED, a lens-based creative collective
-            <br>making socially embedded, critical and curious films.
+            <br>making socially embedded, critical and curious films
         </p>
         <p class="contact">producers@weareunfinished.co.uk</p>
         <p class="location">London, UK</p>
