--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <br>making socially embedded, critical and curious films
         </p>
         <p class="contact">producers@weareunfinished.co.uk</p>
-        <p class="location">London, UK</p>
+        <p class="instagram"><a href="https://www.instagram.com/we.are.unfinished" target="_blank">@we.are.unfinished</a></p>
     </div>
 </body>
 </html>
