--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container" align="right">
         <p class="logo"> <img src="https://raw.githubusercontent.com/unfinished-productions/Unfinishedwebsite/refs/heads/main/Unfinished-Logo-White.png" width="250" height="35"
     alt="unfinished logo"/></p><br>
         <p class="tagline">We are UNFINISHED, a lens-based creative collective
