--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container" align="right">
         <p class="logo"> <img src="https://raw.githubusercontent.com/unfinished-productions/Unfinishedwebsite/refs/heads/main/Unfinished-Logo-White.png" width="250" height="35"
-    alt="unfinished logo"/></p><br>
+    alt="unfinished logo"/></p>
         <p class="tagline">We are UNFINISHED, a lens-based creative collective
             <br>making socially embedded, critical and curious films
-        </p><br>
+        </p>
         <p class="contact"><a href="mailto:producers@weareunfinished.co.uk" target="_blank">producers@weareunfinished.co.uk</a></p>
         <p class="instagram"><a href="https://www.instagram.com/we.are.unfinished" target="_blank">@we.are.unfinished</a></p>
     </div>
